[gd_scene load_steps=2 format=3 uid="uid://cv5b14auvc57a"]

[ext_resource type="Script" path="res://main.gd" id="1_uengg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_uengg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 626.0
offset_bottom = 78.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREATE"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "JOIN"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
auto_height = true

[node name="ItemList2" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
auto_height = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
